# indeed_mongodb_scrapper

./: README.md  requirements.txt  setup.cfg  setup.py
indeed_mongodb_scrapper/: __main__.py
src/indeed_mongodb_scrapper/: __init__.py  __main__.py  scraping.py
src/tests/: test.py
