[metadata]
name = indeed_mongodb_scrapper
version='0.1.0'
description = "Indeed Scrapper storing the data on MongoDB database"
long_description = file: README.md
long_description_content_type = text/markdown
author = Yacine ALLOUACHE
author_email = yacine.allouache1996@gmail.com
home_page = https://github.com/YacineAll/indeed_mongodb_scrapper
license = MIT
platform = any
keywords = scrapping, indeed, jobs, mongodb

project_urls =
    Source = https://github.com/YacineAll/indeed_mongodb_scrapper

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
package_dir=
    =src
packages = find:
test_suite = src.tests
setup_requires =
    setuptools >=30.3.0
    setuptools_scm
    pytest-runner ==5.3.0

[options.extras_require]
test =
    pytest ==6.2.3

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    indeed_mongodb_scrapper = indeed_mongodb_scrapper.__main__:main

[bdist_wheel]
universal = true

[sdist]
formats = zip

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
python_version = 3.8
warn_unused_ignores = True